feat(tool): 工具调用链路优化，修改门禁哈希校验与失败场景智能提示
读文件登记引入内容哈希校验门禁，写文件硬拦截 PowerShell 路径，修改/运行命令失败场景提示优化，文件搜索常量调整与权限引擎适配